<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/label_property_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/property_type" />

            <Spinner
                android:id="@+id/property_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:entries="@array/property_type" />

            <TextView
                android:id="@+id/label_bed_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/bedrooms" />

            <EditText
                android:id="@+id/bed_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="number"
                android:autofillHints="no"
                android:hint="@string/bedrooms" />

            <TextView
                android:id="@+id/label_adding_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/date_and_time_of_adding_the_property" />

            <EditText
                android:id="@+id/date_and_time_of_adding_the_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:text=""
                android:importantForAutofill="no"
                android:inputType="date"
                android:hint="@string/date_and_time_of_adding_the_property" />

            <TextView
                android:id="@+id/label_monthly_rent_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/monthly_rent_price" />

            <EditText
                android:id="@+id/monthly_rent_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="number"
                android:autofillHints="no"
                android:hint="@string/monthly_rent_price" />

            <TextView
                android:id="@+id/label_furniture_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/furniture_types" />

            <RadioGroup
                android:id="@+id/furniture_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <RadioButton
                    android:id="@+id/radio_furnished"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/furnished" />

                <RadioButton
                    android:id="@+id/radio_unfurnished"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unfurnished" />

                <RadioButton
                    android:id="@+id/radio_part_furnished"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/part_furnished" />
            </RadioGroup>

            <TextView
                android:id="@+id/label_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/note" />

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="text"
                android:autofillHints="no"
                android:hint="@string/note" />

            <TextView
                android:id="@+id/label_name_reporter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/name_reporter" />

            <EditText
                android:id="@+id/name_reporter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="text"
                android:autofillHints="no"
                android:hint="@string/name_reporter" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>